--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -1,15 +1,11 @@
-#summary One-sentence summary of this page.
+#summary A few brief words about GPS
 
-= Introduction =
-Test of the first wiki
+= Introduction, the Gimp digital painting initiative =
 
-Add your content here.
-bla bla bla .  look in a a few weeks to see how the gps works
+_Gimp Paint Studio_ is, as described on the front page "a collection of brushes and accompanying tool presets" for the free open-source program [http://www.gimp.org Gimp]. But is also an attempt at something more. It is also an independent initiative to push for the increased awareness that Gimp is _not_ only useful for cropping photos, adjusting colour balances and make minor website graphics. 
 
+Gimp is also an excellent tool for digital painters, creating completely new works of art from scratch, a capacity that is not always fully realized by the default setup, nor in what new developments is being considered for future versions of GIMP. 
 
-= Details =
+The GPS's collected artistic media presets and brush collection is one step on the way towards making GIMP a more pleasant environment for digital artists. But why stop there? 
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+These wiki pages try to combine the experiences and ideas of a group of artists which is _already_ actively and regularly using GIMP for digital painting in order to come up with suggestions for what GIMP would need in order to better suit our particular needs. 
