--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -1,4 +1,7 @@
 #summary A few brief words about GPS
+#sidebar TableOfContents
+
+<wiki:toc max_depth="1"
 
 = Introduction, the Gimp digital painting initiative =
 
@@ -6,6 +9,11 @@ _Gimp Paint Studio_ is, as described on the front page "a collection of brushes 
 
 Gimp is also an excellent tool for digital painters, creating completely new works of art from scratch, a capacity that is not always fully realized by the default setup, nor in what new developments is being considered for future versions of GIMP. 
 
-The GPS's collected artistic media presets and brush collection is one step on the way towards making GIMP a more pleasant environment for digital artists. But why stop there? 
+
+The GPS's collected artistic media presets and brush collection is one step on the way towards making GIMP a more pleasant environment for digital artists. 
+
+But why stop there? 
 
 These wiki pages try to combine the experiences and ideas of a group of artists which is _already_ actively and regularly using GIMP for digital painting in order to come up with suggestions for what GIMP would need in order to better suit our particular needs. 
+
+Who knows, maybe we can make a difference?
