--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -1,7 +1,7 @@
 #summary A few brief words about the GPS initiative
 #sidebar TableOfContents
 
-= Introduction, the Gimp digital painting initiative =
+= Introduction = 
 
 _Gimp Paint Studio_ is, as described on the front page "a collection of brushes and accompanying tool presets" for the free open-source program [http://www.gimp.org Gimp]. But is also an attempt at something more. It is also an independent initiative to push for the increased awareness that Gimp is _not_ only useful for cropping photos, adjusting colour balances and make minor website graphics. 
 
@@ -10,7 +10,7 @@ Gimp is also an excellent tool for digital painters, creating completely new wor
 The GPS's collected artistic media presets and brush collection is one step on the way towards making GIMP a more pleasant environment for digital artists. 
 
 
-= But why stop there? = 
+= ... But why stop there? = 
 
 These wiki pages try to combine the experiences and ideas of a group of artists which is _already_ actively and regularly using GIMP for digital painting in order to come up with suggestions for what GIMP would need in order to better suit our particular needs. 
 
