--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -15,6 +15,7 @@ The GPS's collected artistic media presets and brush collection is one step on t
 
 = ... But why stop there? = 
 
-These wiki pages try to combine the experiences and ideas of a group of artists which is _already_ actively and regularly using GIMP for digital painting in order to come up with suggestions for what GIMP would need in order to better suit our particular needs. 
+These wiki pages try to combine the experiences and ideas of a group of artists which is _already_ actively and regularly using GIMP for digital painting. 
+The plan is to come up with suggestions and possibly develop a plan for what GIMP would need in order to better suit our particular needs. 
 
 _Who knows, maybe we can make a difference?_
