Edited wiki page through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -19,3 +19,5 @@ These wiki pages try to combine the experiences and ideas of a group of artists 
 The plan is to come up with suggestions and possibly develop a plan for what GIMP would need in order to better suit our particular needs. 
 
 _Who knows, maybe we can make a difference?_
+
+http://th03.deviantart.net/fs47/300W/f/2009/218/c/1/Racing_the_sunrise_by_Griatch_art.jpg _Artwork by Griatch_ 
