--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -20,4 +20,4 @@ The plan is to come up with suggestions and possibly develop a plan for what GIM
 
 _Who knows, maybe we can make a difference?_
 
-http://th03.deviantart.net/fs47/300W/f/2009/218/c/1/Racing_the_sunrise_by_Griatch_art.jpg _Artwork by Griatch_ 
+[http://griatch-art.deviantart.com/art/Racing-the-sunrise-132332010 http://th03.deviantart.net/fs47/300W/f/2009/218/c/1/Racing_the_sunrise_by_Griatch_art.jpg] _Artwork by Griatch_ 
