--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,6 +1,6 @@
 #summary Table of Contents
 
  * [Introduction]
- * [GIMP capabilities (gallery)]
+ * [Gallery GIMP capabilities (gallery)]
  * [BrainStorm Brainstorming] 
  * [LinkPage Useful links]
