Edited wiki page through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -1,5 +1,6 @@
-#summary A few brief words about the GPS initiative
 #labels Featured
+<wiki:toc max_depth="1" />
+#summary A few brief words about the GPS initiative
 #sidebar TableOfContents
 
 = Introduction = 
