Edited wiki page through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -1,6 +1,5 @@
+#summary A few brief words about the GPS initiative.
 #labels Featured
-
-#summary A few brief words about the GPS initiative
 #sidebar TableOfContents
 
 = Introduction = 
