--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -1,14 +1,13 @@
 #summary One-sentence summary of this page.
+#labels Featured
 
 = GPS Gimp Paint Studio Videos  =
 
+The following videos shows what is GPS and how to use it. Enjoy them
+==*Introduction to GPS*==
+<wiki:video url="http://www.youtube.com/watch?v=Y9tOnxHmRiw"/>
+==*Painting a simple sky*==
+<wiki:video url="http://www.youtube.com/watch?v=-mesoLSTa8o"/>
+==*Nebulae Preset*==
+<wiki:video url="http://www.youtube.com/watch?v=Ps0Fmae4xps&feature=related"/>
 
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
