Edited wiki page through web user interface.

--- a/wiki/GPS_Video_Tutorials.wiki
+++ b/wiki/GPS_Video_Tutorials.wiki
@@ -1,6 +1,6 @@
 #labels Featured
 #GPS Gimp Paint Studio Videotutorials.
-
+#sidebar TableOfContents
 = GPS Gimp Paint Studio Videotutorials  =
 The following videos shows what is GPS and how to use it. Enjoy them
 ==*Introduction to GPS*==
