--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -4,11 +4,11 @@
 
 = Introduction = 
 
-_Gimp Paint Studio_ is, as described on the front page "a collection of brushes and accompanying tool presets" for the free open-source program [http://www.gimp.org Gimp]. 
+_Gimp Paint Studio_ is, as described on the front page "a collection of *brushes* and accompanying "tool presets" for the free open-source program [http://www.gimp.org Gimp]. 
 
 But it is also an attempt at something more. It is also an independent initiative to push for the increased awareness that Gimp is _not_ only useful for cropping photos, adjusting colour balances and make minor website graphics. 
 
-Gimp is also an excellent tool for digital painters, creating completely new works of art from scratch, a capacity that is not always fully realized by the default setup, nor in what new developments is being considered for future versions of GIMP. 
+Gimp is also *an excellent tool for digital painters*, creating completely new works of art from scratch, a capacity that is not always fully realized by the default setup, nor in what new developments is being considered for future versions of GIMP. 
 
 The GPS's collected artistic media presets and brush collection is one step on the way towards making GIMP a more pleasant environment for digital artists. 
 
@@ -16,6 +16,14 @@ The GPS's collected artistic media presets and brush collection is one step on t
 = ... But why stop there? = 
 
 These wiki pages try to combine the experiences and ideas of a group of artists which is _already_ actively and regularly using GIMP for digital painting. 
-The plan is to come up with suggestions and possibly develop a plan for what GIMP would need in order to better suit our particular needs. 
+The plan is to *come up with suggestions* and possibly develop a plan for what GIMP would need in order to better suit our particular needs. 
 
 _Who knows, maybe we can make a difference?_
+
+
+Greets to all, i hope you enjoy your visit.
+
+
+_______________
+Ramón Miranda
+GPS owner 
