Edited wiki page through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,8 +1,10 @@
 #summary Table of Contents
+#labels Featured
 
  * [Introduction]
  * [Gallery GIMP capabilities (gallery)]
  * [GPS_Video_Tutorials]
+ * [Features]
  * [Installation]
  * [BrainStorm Brainstorming] 
  * [LinkPage Useful links]
