--- a/wiki/Features.wiki
+++ b/wiki/Features.wiki
@@ -7,6 +7,12 @@ Here i am going to explaing how to make cool things with the GPS presets.
 There are lot of things that we can do with the presets.
 Put some images like blogs post. Testing and experiments
 
+http://3.bp.blogspot.com/_iXHeK9sB42s/SxwUGxst4_I/AAAAAAAAAYg/fwpuAJcJC-s/s320/prueba+fuego01.jpg
+
+*Testing Rocket fire*
+
+http://2.bp.blogspot.com/_iXHeK9sB42s/SxwT5shlSqI/AAAAAAAAAYY/MRkTU5oXuoY/s320/Fire+Column.jpg
+
 
 = Details =
 
