Edited wiki page through web user interface.

--- a/wiki/GPS_Video_Tutorials.wiki
+++ b/wiki/GPS_Video_Tutorials.wiki
@@ -46,6 +46,26 @@ The following videos shows what is GPS and how to use it. Enjoy them and please,
 ==*Curso de gimp + GPS - Parte 4*==
 <wiki:video url="http://www.youtube.com/watch?v=T69NbiVAKpE"/>
 
+==*Curso de gimp + GPS - Parte 5*==
+<wiki:video url="http://www.youtube.com/watch?v=FzgtG8oIlEY"/>
+
+==*Curso de gimp + GPS - Parte 6*==
+<wiki:video url="http://www.youtube.com/watch?v=bA3EcFbpdGs"/>
+
+==*Curso de gimp + GPS - Parte 7*==
+<wiki:video url="http://www.youtube.com/watch?v=TlyMjOATRSM"/>
+
+==*Curso de gimp + GPS - Parte 8*==
+<wiki:video url="http://www.youtube.com/watch?v=tJgyKznvTrk"/>
+
+==*Curso de gimp + GPS - Parte 9*==
+<wiki:video url="http://www.youtube.com/watch?v=VQBJagODjCI"/>
+
+*Proximamente nuevas entregas*
+
+
+
+
 
 
 
