--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -4,7 +4,8 @@
 = Installation guide for GPS =
 
 
-=How to install . in Linux and Win= .WIP please be patient.
+=How to install . in Linux and Win= 
+*WIP please be patient. for more info check the users guide on downloads section.*
 
 ==How to install GPS==
 GIMP must be installed on your computer before installing GPS. If it is not you can download it from the official website. www.gimp.org
@@ -13,31 +14,39 @@ Once installed we can continue with the process. If GIMP is already running, exi
 Download the last version of GPS From the google code page:
 http://code.google.com/p/gps-gimp-paint-studio/downloads/list
 
-Unpack the file to any folder.  If you open this folder you will find the following folders and files:
+Unpack the file to any folder. If you open this folder you will find the following folders and files:
 
-brushes (folder)
-palettes (folder)
-tool-options (folder)
-sessionrc (file)
-toolrc (file)
+* brushes (folder)
+* palettes (folder)
+* tool-options (folder)
+* sessionrc (file)
+* toolrc (file)
 
 The brushes folder holds all the GPS brushes. Copy the contents of this folder to your GIMP brushes folder
 On Linux:
-~/.Gimp-2.6/brushes
+_~/.Gimp-2.6/brushes_
+
 On Windows:
-c:\documents and settings\<your username>\.Gimp-2.6/brushes
+_c:\documents and settings\<your username>\.Gimp-2.6/brushes_
 
 The palettes folder holds all the GPS color palettes.  Copy this file to your GIMP palettes folder:
 On Linux:
-~/.Gimp-2.6/palettes
+_~/.Gimp-2.6/palettes_
+
 On Windows:
-c:\documents and settings\<your username>\.Gimp-2.6/palettes
+_c:\documents and settings\<your username>\.Gimp-2.6/palettes_
 
 Open the tool-options GPS in the folder and copy all its contents inside the folder "tool-options" to
-~/.Gimp-2.6/tool-options
+_~/.Gimp-2.6/tool-options_
 
-If you want to add some tools to the Toolbox then copy the  toolrc file to the top level of your GIMP configuration folder.  This file will add icons for the Hue/Saturation and Curves dialogs to the Toolbox.
+If you want to *add some tools to the Toolbox* then copy the  *toolrc* file to the top level of your GIMP configuration folder.  This file will add icons for the Hue/Saturation and Curves dialogs to the Toolbox.
 
-If you want to use GPS dialog layout then copy the file sessionrc to the top level of your GIMP configuration folder.  
-Note:  this will change the layout of GIMP's windows.  Save a backup copy of the original sessionrc (just rename it to sessionrc.old, for example) that you can restore if the new layout does not suit your needs.
+If you want to use *GPS dialog layout* then copy the file *sessionrc* to the top level of your GIMP configuration folder.  
+
+_Note:  this will change the layout of GIMP's windows.  Save a backup copy of the original sessionrc (just rename it to sessionrc.old, for example) that you can restore if the new layout does not suit your needs._
+
 Start Gimp.  The next two steps are optional but will improve the overall usability of the user interface.  First,  go to Edit->Preferences->Toolbox and activate the three options there. Then go to Edit->Preferences->Tool Options.  On this page, under the Paint Options Shared Between Tools, disable the three options (Brush, Pattern, and Gradient).
+
+
+
+
