--- a/wiki/Gallery.wiki
+++ b/wiki/Gallery.wiki
@@ -36,3 +36,13 @@ http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/pirate01.
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/pirate02.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/promobarbaro.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/promocabecadecavalo.jpg
+
+----
+==*USERS GALLERY*==
+Art by Scherezade. 
+http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/portrait-by-Alex.jpg
+
+Art by Jayme. http://jayme2.wordpress.com/
+http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/ocelot_by_Jayme.jpg
+http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/cat_by_Jayme.jpg
+http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/Monkey_by_Jayme.jpg
