--- a/wiki/Gallery.wiki
+++ b/wiki/Gallery.wiki
@@ -10,8 +10,14 @@ _If you want to contribute with your art, please mailme first here_ mirandagraph
 Please be patient while images are loading. big download
 ----
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/sketch-fast.jpg
+http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/pirate01.jpg
+http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/pirate02.jpg
+http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/promobarbaro.jpg
+http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/promocabecadecavalo.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/form-pencil-to-paint-1.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/warrior-horse-1.jpg
+----
+----
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/sea-paint-sketch.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/robot-crazy-for-love.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/portrait-sketch.jpg
@@ -27,22 +33,23 @@ http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/warrior-1
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/forest.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/fire02.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/fire01.jpg
+http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/emperor.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/fast-sketch-funny.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/eye-tutorial.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/dragon-GPS.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/comic-Azpiri-homage.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/alien-meditation.jpg
-http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/pirate01.jpg
-http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/pirate02.jpg
-http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/promobarbaro.jpg
-http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/promocabecadecavalo.jpg
+
 
 ----
 ==*USERS GALLERY*==
-Art by Scherezade. 
+Art by scheherazade2c. http://scheherazade2c.deviantart.com/
+----
+ 
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/portrait-by-Alex.jpg
 
 Art by Jayme. http://jayme2.wordpress.com/
+----
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/ocelot_by_Jayme.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/cat_by_Jayme.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/Monkey_by_Jayme.jpg
