Edited wiki page through web user interface.

--- a/wiki/Gallery.wiki
+++ b/wiki/Gallery.wiki
@@ -9,7 +9,8 @@ _If you want to contribute with your art, please mailme first here_ mirandagraph
 
 Please be patient while images are loading. big download
 ----
-http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/sketch-fast.jpg
+ART BY MOZART COUTO 
+http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/warrior-1.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/pirate01.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/pirate02.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/promobarbaro.jpg
@@ -18,6 +19,8 @@ http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/form-penc
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/warrior-horse-1.jpg
 ----
 ----
+ART BY RAMON MIRANDA
+http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/sketch-fast.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/sea-paint-sketch.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/robot-crazy-for-love.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/portrait-sketch.jpg
@@ -29,7 +32,6 @@ http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/metal-hor
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/mekka-concept.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/lusitan-horse.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/landscape.jpg
-http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/warrior-1.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/forest.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/fire02.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/fire01.jpg
