--- a/wiki/Gallery.wiki
+++ b/wiki/Gallery.wiki
@@ -9,7 +9,8 @@ _If you want to contribute with your art, please mailme first here_ mirandagraph
 
 Please be patient while images are loading. big download
 ----
-ART BY MOZART COUTO 
+*==ART BY MOZART COUTO==*
+ 
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/warrior-1.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/pirate01.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/pirate02.jpg
@@ -19,7 +20,8 @@ http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/form-penc
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/warrior-horse-1.jpg
 ----
 ----
-ART BY RAMON MIRANDA
+*==ART BY RAMON MIRANDA==*
+
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/sketch-fast.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/sea-paint-sketch.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/robot-crazy-for-love.jpg
