Edited wiki page through web user interface.

--- a/wiki/Gallery.wiki
+++ b/wiki/Gallery.wiki
@@ -9,7 +9,7 @@ _If you want to contribute with your art, please mailme first here_ mirandagraph
 
 Please be patient while images are loading. big download
 ----
-*==ART BY MOZART COUTO==*
+==*ART BY MOZART COUTO*==
 ----
  
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/warrior-1.jpg
@@ -21,7 +21,7 @@ http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/form-penc
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/warrior-horse-1.jpg
 ----
 ----
-*==ART BY RAMON MIRANDA==*
+==*ART BY RAMON MIRANDA*==
 ----
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/sketch-fast.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/sea-paint-sketch.jpg
