Edited wiki page through web user interface.

--- a/wiki/Gallery.wiki
+++ b/wiki/Gallery.wiki
@@ -23,7 +23,9 @@ http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/warrior-h
 ----
 ----
 ==*ART BY RAMON MIRANDA*==
+http://ramonmirandavisualart.blogspot.com
 ----
+
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/sketch-fast.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/sea-paint-sketch.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/robot-crazy-for-love.jpg
@@ -49,12 +51,15 @@ http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/alien-med
 
 ----
 ==*USERS GALLERY*==
-Art by scheherazade2c. http://scheherazade2c.deviantart.com/
 ----
- 
+===Art by scheherazade2c===
+http://scheherazade2c.deviantart.com/
+----
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/portrait-by-Alex.jpg
 
-Art by Jayme. http://jayme2.wordpress.com/
+----
+===Art by Jayme=== 
+http://jayme2.wordpress.com/
 ----
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/ocelot_by_Jayme.jpg
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/cat_by_Jayme.jpg
