Edited wiki page through web user interface.

--- a/wiki/LinkPage.wiki
+++ b/wiki/LinkPage.wiki
@@ -3,7 +3,7 @@
 
 =Personal homepages and galleries= 
 
- * [http://ramonmirandavisualart.blogspot.com/ VisualArt]
+ * [http://ramonmirandavisualart.blogspot.com/ Ramón Miranda]
  * [http://www.davidrevoy.com/index.php?lang=en David Revoy]
  * [http://blogdodesenhador.blogspot.com/ Mozart Couto]
  * [http://griatch-art.deviantart.com/ Griatch]
