--- a/wiki/LinkPage.wiki
+++ b/wiki/LinkPage.wiki
@@ -15,6 +15,8 @@
  * [http://www.gimp.org GIMP]
  * [http://gimp-brainstorm.blogspot.com/ GIMP UI Brainstorm]
  * [http://river-valley.tv/gimp-ui-taking-some-big-issues-by-the-horns/ GIMP UI future discussion (video)]
+ * [http://sourceforge.jp/projects/gimp-painter/releases/?package_id=6799 Gimp Painter Patch. (mixbrush and g-pen)
+ * [http://www.davidrevoy.com/?article29/free-brush-kit-for-chaos-and-evolutions DAvid´s Chaos&Evolution brushes and presets kit]
 
 =Other program links=
  * [http://mypaint.intilinux.com/ MyPaint]
