Edited wiki page through web user interface.

--- a/wiki/Features.wiki
+++ b/wiki/Features.wiki
@@ -3,6 +3,7 @@
 THIS PAGE IS UNDER CONSTRUCTION
 = Features of GPS =
 <p style="color: green">Testing <span style="color: red">colorful</span> text</p>
+<font color="red">test</font>
 
 Here i am going to explaing how to make cool things with the GPS presets.
 There are lot of things that we can do with the presets.
