Edited wiki page through web user interface.

--- a/wiki/Gallery.wiki
+++ b/wiki/Gallery.wiki
@@ -52,6 +52,14 @@ http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/alien-med
 ----
 ==*USERS GALLERY*==
 ----
+
+----
+===Art by David Revoy===
+http://www.davidrevoy.com/
+----
+http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/david.jpg
+
+----
 ===Art by scheherazade2c===
 http://scheherazade2c.deviantart.com/
 ----
