Edited wiki page through web user interface.

--- a/wiki/GPS_Video_Tutorials.wiki
+++ b/wiki/GPS_Video_Tutorials.wiki
@@ -61,10 +61,23 @@ The following videos shows what is GPS and how to use it. Enjoy them and please,
 ==*Curso de gimp + GPS - Parte 9*==
 <wiki:video url="http://www.youtube.com/watch?v=VQBJagODjCI"/>
 
+==*Curso de gimp + GPS - Parte 10*==
+<wiki:video url="http://www.youtube.com/watch?v=MxgcrE4ewOc"/>
+
+==*Curso de gimp + GPS - Parte 11*==
+<wiki:video url="http://www.youtube.com/watch?v=WRRL5g5XnZ4"/>
+
+==*Curso de gimp + GPS - Parte 12*==
+<wiki:video url="http://www.youtube.com/watch?v=YFbwzd1dK1w"/>
+
+==*Curso de gimp + GPS - Parte 13*==
+<wiki:video url="http://www.youtube.com/watch?v=9Q1itOCCUmY"/>
+
+==*Curso de gimp + GPS - Parte 14*==
+<wiki:video url="http://www.youtube.com/watch?v=Os_XYU8jGVs"/>
+
+
 *Proximamente nuevas entregas*
-
-
-
 
 
 
