--- a/wiki/Features.wiki
+++ b/wiki/Features.wiki
@@ -1,6 +1,9 @@
 #summary One-sentence summary of this page.
 #labels Featured
 <font size="18" color="#ff0000">THIS PAGE IS UNDER CONSTRUCTION</font>
+
+_*for now PLEASE download the PDF user guide on the Downloads page of the wiki.*_
+
 = Features of GPS =
 
 = PRESETS IN GIMP PAINT STUDIO =
@@ -15,19 +18,13 @@ These presets are listed by  name found in the Tool Options Restore icon's menu.
 ----
 Semi-hard edge but with a fairly accurate outline for details. The quality of its stroke is halfway between a 2b and a mechanical pencil. This tool is sufficient for experienced designers to develop their rough Sketch. It has the advantages of a pencil but is not as hard pencil. (Although raising and lowering the opacity a little, it can easily become a hard pencil).
 
-<img="center">http://3.bp.blogspot.com/_iXHeK9sB42s/SxwUGxst4_I/AAAAAAAAAYg/fwpuAJcJC-s/s320/prueba+fuego01.jpg</img>
-
 *2B Pencil*
 ----
 Like a real 2B pencil. It has a tip that is not too hard, which is perfect for quick sketches without much detail where we're only looking for a rough idea of shapes and volumes. Is meant to not reach a pitch black, but gray.
 
-http://2.bp.blogspot.com/_iXHeK9sB42s/SxwT5shlSqI/AAAAAAAAAYY/MRkTU5oXuoY/s320/Fire+Column.jpg
-
 *6B Pencil*
 ----
 Soft tip pencil. It's ideal for shading but not for drawing details (you won't be able to make nice eyelashes with it). But as in real life, it can increase the range of shading or make the drawing more intense by filling in key areas with high contrast. It may seem a little greasy, or at least it seems to me when I use it but it is fun making messy drawings, making them appear more loose.
-
-http://2.bp.blogspot.com/_iXHeK9sB42s/SxwT5shlSqI/AAAAAAAAAYY/MRkTU5oXuoY/s320/Fire+Column.jpg
 
 *Graphite Shadow*
 ----
@@ -53,7 +50,6 @@ This is the same as the Normal Brush but for details, so we don't go into a deta
 *Fast Block-Brush*
 ----
 It is a variant of normal Brush but modified slightly so that it makes more angular strokes. Sometimes a round tip is not the best option and a modified variant can save time.
-
 
 *Knife Palette*
 ----
@@ -89,8 +85,6 @@ The era of purely digital ended long ago. Today we like to see images more rich 
 *Normal Dust*
 ----
 Just another type of dust a little larger to create different effects, adding texture to the image.
-
-
 
 *Rough Dust*
 ----
