--- a/wiki/Features.wiki
+++ b/wiki/Features.wiki
@@ -1,9 +1,8 @@
-#summary One-sentence summary of this page.
 #labels Featured
 <font size="18" color="#ff0000">THIS PAGE IS UNDER CONSTRUCTION</font>
 
-_*for now PLEASE download the PDF user guide on the Downloads page of the wiki.*_
-
+_*for now PLEASE download the PDF user guide on the Downloads section.*_
+http://code.google.com/p/gps-gimp-paint-studio/downloads/list
 = Features of GPS =
 
 = PRESETS IN GIMP PAINT STUDIO =
