--- a/wiki/LinkPage.wiki
+++ b/wiki/LinkPage.wiki
@@ -16,7 +16,10 @@
  * [http://www.gimp.org GIMP]
  * [http://gimp-brainstorm.blogspot.com/ GIMP UI Brainstorm]
  * [http://river-valley.tv/gimp-ui-taking-some-big-issues-by-the-horns/ GIMP UI future discussion (video)]
- * [http://sourceforge.jp/projects/gimp-painter/releases/?package_id=6799/ Gimp Painter Patch. (mixbrush and g-pen)]
+ * [http://www.gimptalk.com/ GimpTalk]
+ * [http://www.gimpusers.com/ GimpUsers http://i458.photobucket.com/albums/qq308/TheShock_album/Gimp%20testing/gu_logo_en.jpg] 
+
+* [http://sourceforge.jp/projects/gimp-painter/releases/?package_id=6799/ Gimp Painter Patch. (mixbrush and g-pen)]
  
 
 =Other program links=
