--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -4,7 +4,7 @@
  * [Introduction]
  * [Gallery GIMP capabilities (gallery)]
  * [GPS_Video_Tutorials]
- * [VideoturialesES]
+ * [Videotutoriales_ES]
  * [Features]
  * [Installation]
  * [BrainStorm Brainstorming] 
