--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -18,9 +18,9 @@ The GPS's collected artistic media presets and brush collection is one step on t
 = ... But why stop there? = 
 
 These wiki pages try to combine the experiences and ideas of a group of artists which is _already_ actively and regularly using GIMP for digital painting. 
-The plan is to *come up with suggestions* and possibly develop a plan for what GIMP would need in order to better suit our particular needs. 
+The plan is to *come up with suggestions* and possibly develope a plan for what GIMP would need in order to better suit our particular needs. 
 
-_Who knows, maybe we can make a difference?_
+_Who knows, maybe we can make the difference?_
 
 
 Greets to all, i hope you enjoy your visit.
