Edited wiki page Introduction through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -10,9 +10,24 @@ _Gimp Paint Studio_ is, as described on the front page "a collection of *brushes
 
 But it is also an attempt at something more. It is also an independent initiative to push for the increased awareness that Gimp is _not_ only useful for cropping photos, adjusting colour balances and make minor website graphics. 
 
-Gimp is also *an excellent tool for digital painters*, creating completely new works of art from scratch, a capacity that is not always fully realized by the default setup, nor in what new developments is being considered for future versions of GIMP. 
+Gimp is also *an excellent tool for digital painters*, creating completely new works of art from scratch, a capacity that is not always fully realized by the default setup, untill now. Developers are working on more features for next releases.
 
 The GPS's collected artistic media presets and brush collection is one step on the way towards making GIMP a more pleasant environment for digital artists. 
+
+So if you want to know more about GPS check it out the Wiki!
+
+[Introduction]
+
+[GIMP capabilities(gallery)]
+
+[Installation]
+
+[Videotutorials_EN]
+
+[Videotutoriales_ES]
+
+[Features]
+
 
 
 = ... But why stop there? = 
