Edited wiki page Introduction through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -18,7 +18,7 @@ So if you want to know more about GPS check it out the Wiki!
 
 [Introduction]
 
-[GIMP capabilities(gallery)]
+[Gallery]
 
 [Installation]
 
