Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -2,7 +2,7 @@
 #labels Featured
 
  * [Introduction]
- * [Gallery]
+ * [Gallery GPS Gallery]
  * [Installation]
  * [Videotutorials_EN]
  * [Videotutoriales_ES]
