Edited wiki page Videotutorials_EN through web user interface.

--- a/wiki/Videotutorials_EN.wiki
+++ b/wiki/Videotutorials_EN.wiki
@@ -4,7 +4,7 @@
 = GPS Gimp Paint Studio Videotutorials  =
 The following videos shows what is GPS and how to use it. Enjoy them and please,see them in HD.Thw image quality is not the same.
 
- || ==*Preset Examples of GPS*==<wiki:video url="http://www.youtube.com/watch?v=rmcvR2yeGbQ"/> || ==*Making of Nixie Pixel Portrait*==<wiki:video url="http://www.youtube.com/watch?v=9lHDsO5x-Tg"/> ||
+ || *Preset Examples of GPS* <wiki:video url="http://www.youtube.com/watch?v=rmcvR2yeGbQ"/> || *Making of Nixie Pixel Portrait* <wiki:video url="http://www.youtube.com/watch?v=9lHDsO5x-Tg"/> ||
 
 ==*Painting a simple sky*==
 <wiki:video url="http://www.youtube.com/watch?v=-mesoLSTa8o"/>
@@ -53,4 +53,3 @@ The following videos shows what is GPS and how to use it. Enjoy them and please,
 
 ==*GIMP PAINTER- Drawing and Painting with GPS 1.4 IV)*==
 <wiki:video url="http://www.youtube.com/watch?v=7XrKGMO11ts&feature=fvw"/>
-
