Edited wiki page Installation through web user interface.

--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -96,4 +96,4 @@ Enable the three options.
 
 Go to 
 	_Edit->Preferences->Tool options/Paint options shared between tools_
-Disable the three options.
+Dissable the three options.
