--- a/wiki/Videotutorials_EN.wiki
+++ b/wiki/Videotutorials_EN.wiki
@@ -13,9 +13,8 @@ The following videos shows what is GPS and how to use it. Enjoy them and please,
  || *GIMP .Mapping the Mouse wheel* <wiki:video url="http://www.youtube.com/watch?v=EVHWlohjGRQ"/> || *GIMP .Sketching Presets trick* <wiki:video url="http://www.youtube.com/watch?v=3BgcaOe0w7Q"/> ||
 
  || *GIMP .Customizing the SplashScreen in gimp* <wiki:video url="http://www.youtube.com/watch?v=l4L_3PMMVXk"/> || *GIMP. brush rotation controlled by shortcuts* <wiki:video url="http://www.youtube.com/watch?v=f3KLqjf_eh8"/> ||
-
- || *GIMP PAINTER- inking a barbarian I)* <wiki:video url="http://www.youtube.com/watch?v=LXzb23Md4X4"/> || *GIMP PAINTER- inking a barbarian II)*
-<wiki:video url="http://www.youtube.com/watch?v=OpZua6d-mwY&feature=related"/> ||
+ 
+ || *GIMP PAINTER- inking a barbarian I)* <wiki:video url="http://www.youtube.com/watch?v=LXzb23Md4X4"/> || *GIMP PAINTER- inking a barbarian II)* <wiki:video url="http://www.youtube.com/watch?v=OpZua6d-mwY&feature=related"/> ||
 
  || *GIMP PAINTER- inking a barbarian III)* <wiki:video url="http://www.youtube.com/watch?v=hSEMZvSrD6A&feature=related"/> || *GIMP. Finalizando Desenho Com Ferramenta "Tinta"(ink)* <wiki:video url="http://www.youtube.com/watch?v=gESr9LbUJRQ&feature=related"/> ||
 
